add edex & smart agency

--- a/index.html
+++ b/index.html
@@ -548,6 +548,25 @@
                             </div>
                             <!--=== Single Portfolio End ===-->
 
+                             <!--=== Single Portfolio Start ===-->
+                             <div class="col-md-5 col-sm-6 col-xs-12">
+                                <div class="portfolio-single">
+                                    <div class="portfolio-thum">
+                                        <img src="img/project/smart.jpg" alt="Smart">
+                                    </div>
+                                    <div class="portfolio-hover text-center">
+                                        <div class="port-btn-hvr">
+                                            <a href="img/project/smart.jpg" class="image-link"><i class="fa fa-search-plus"></i></a>
+                                            <a href='meghna_smart.html'><i class="fa fa-link"></i></a>
+                                        </div>
+                                        <div class="port-meta">
+                                            <h4>MLI-Smart Agency</h4>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!--=== Single Portfolio End ===-->
+
                         </div>
                     </div>
                 </div>
