--- a/meghna_smart.html
+++ b/meghna_smart.html
@@ -10,7 +10,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 
-	<title>DMS- Distribution Management System</title>
+	<title>MLI-Smart Agency</title>
 
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -106,7 +106,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<h1>Distribution Management System</h1>
+					<h1>MLI-Smart Agency</h1>
 				</div>
 			</div>
 		</div>
@@ -120,53 +120,48 @@
 			<div class="col-md-12">
 				<div class="portfolio-open">
 					<!-- Single Portfolio Open Item -->
+					<!-- Single Portfolio Open Item -->
 <div class="portfolio-open-item">
-	<div class="row">
-		<div class="col-md-8">
-			<div class="portfolios-thumbnail owl-carousel">
-				<img src="img/project/dashboard.jpg" alt="Nurujjaman">
-				<img src="img/project/create_order.jpg" alt="Nurujjaman">
-				<img src="img/project/scan_imei.jpg" alt="Nurujjaman">
-				<img src="img/project/schedule_list.jpg" alt="Nurujjaman">
-				<img src="img/project/track_sr.jpg" alt="Nurujjaman">
-			</div>
-		</div>
-		<div class="col-md-4 col-sm-8">
-			<div class="portfolio-open-content">
-				<div class="project-info port-margin wow fadeInUp">
-					<h4>Project Info</h4>
-					<p>
-						Developed a <strong>Distributor Management System (DMS)</strong> mobile application to streamline and digitize the operations of Salextra Limited, the mother distributor of Nokia Mobile in Bangladesh.
-					</p>
-					<p><strong>Key Responsibilities:</strong></p>
-					<ul>
-						<li>Designed and implemented user-specific panels for Distributors, Sales Representatives (SR), and Territory Sales Officers (TSO) to streamline their workflows.</li>
-						<li>Integrated a real-time location tracking system for efficient monitoring and management of SR activities.</li>
-						<li>Enhanced operational visibility and performance tracking through robust and user-centric app functionalities.</li>
-					</ul>
-					<p><strong>Panels:</strong></p>
-					<ol>
-						<li>TSO/TSM</li>
-						<li>Distributor</li>
-						<li>Retail</li>
-						<li>SR</li>
-					</ol>
-				</div>
+    <div class="row">
+        <div class="col-md-8">
+            <div class="portfolios-thumbnail owl-carousel">
+                <img src="img/project/smart_1.png" alt="Nurujjaman">
+                <img src="img/project/smart_2.png" alt="Nurujjaman">
+                <img src="img/project/smart_3.png" alt="Nurujjaman">
+                <img src="img/project/smart_4.png" alt="Nurujjaman">
+                <img src="img/project/smart_5.jpg" alt="Nurujjaman">
+            </div>
+        </div>
+        <div class="col-md-4 col-sm-8">
+            <div class="portfolio-open-content">
+                <div class="project-info port-margin wow fadeInUp">
+                    <h4>Project Info</h4>
+                    <p>
+                        Contributed to the development of <strong>Meghna Life Insurance (FA App)</strong>, a financial advisor app aimed at improving portfolio management, policy tracking, and report generation for insurance agents.
+                    </p>
+                    <p><strong>Key Responsibilities:</strong></p>
+                    <ul>
+                        <li>Developed features and modules using the Flutter framework.</li>
+                        <li>Collaborated with the backend team for seamless API integration.</li>
+                        <li>Conducted testing and resolved bugs to ensure application reliability and performance.</li>
+                    </ul>
+                </div>
 
-				<div class="project-client port-margin wow fadeInUp">
-					<h4>Client</h4>
-					<p>Salextra Ltd.</p>
-				</div>
+                <div class="project-client port-margin wow fadeInUp">
+                    <h4>Client</h4>
+                    <p>Meghna Life Insurance</p>
+                </div>
 
-				<div class="project-skill port-margin wow fadeInUp">
-					<h4>Skill Used</h4>
-					<p>Flutter, Location, REST API, Clean Architecture with BLoC</p>
-				</div>
-			</div>
-		</div>
-	</div>
+                <div class="project-skill port-margin wow fadeInUp">
+                    <h4>Skill Used</h4>
+                    <p>Flutter, REST API, Clean Architecture</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
+                    
 					<!-- Single Portfolio Open Item -->
 				</div>
 			</div>
