--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             <img src="img/profile_pic.jpg" alt="Resume Template">
                         </div>
                         <div class="resume-btn">
-                            <a href="Md-Nurujjaman-CV.pdf" download="Md-Nurujjaman-CV.pdf">
+                            <a href="MD Nurujjaman(CV).pdf" download="MD Nurujjaman(CV).pdf">
                                 <i class="fa fa-cloud-download"></i> Download Resume
                             </a>
                         </div>
