Comment out widget.js script in index.html
Comment out the widget.js script inclusion in index.html

--- a/index.html
+++ b/index.html
@@ -817,7 +817,7 @@
     <script type="text/javascript" src="js/plugins/isotope.min.js"></script>
     <script type="text/javascript" src="js/plugins/jqBootstrapValidation.js"></script>
     <script type="text/javascript" src="js/plugins/contact_me.js"></script>
-    <script src="https://assistant.techsoltechbd.com/widget.js"></script>
+    <!-- <script src="https://assistant.techsoltechbd.com/widget.js"></script> -->
 
     <script type="text/javascript" src="js/main.js"></script>
 </body>
