Add external widget script to index.html

--- a/index.html
+++ b/index.html
@@ -817,7 +817,8 @@
     <script type="text/javascript" src="js/plugins/isotope.min.js"></script>
     <script type="text/javascript" src="js/plugins/jqBootstrapValidation.js"></script>
     <script type="text/javascript" src="js/plugins/contact_me.js"></script>
-  
+  <script src="https://assistant.techsoltechbd.com/widget.js?key=cpNuM6Vn4DJCGbqir7Xh"></script>
+
 
     <script type="text/javascript" src="js/main.js"></script>
 </body>
